--- a/playbooks/oooq-traas-over.yaml
+++ b/playbooks/oooq-traas-over.yaml
@@ -6,15 +6,15 @@
   gather_facts: false
   become: true
   vars_files:
-    - vars/overcloud-traas.yaml
+    - ../vars/overcloud-traas.yaml
   roles:
-    - repo-setup
+    - {role: repo-setup,  when: configure_repos|bool
 
 - name: Run overcloud prep roles
   hosts: undercloud
   any_errors_fatal: true
   vars_files:
-    - vars/overcloud-traas.yaml
+    - ../vars/overcloud-traas.yaml
   gather_facts: false
   become: true
   roles:
@@ -27,7 +27,7 @@
   gather_facts: true
   become: false
   vars_files:
-    - vars/overcloud-traas.yaml
+    - ../vars/overcloud-traas.yaml
   roles:
     - overcloud-deploy
   #TODO parametrize env vars for the deployed-server remaining roles
@@ -42,7 +42,7 @@
   hosts: undercloud
   gather_facts: false
   vars_files:
-    - vars/overcloud-traas.yaml
+    - ../vars/overcloud-traas.yaml
   become: false
   tags:
     - overcloud-deploy
