--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -39,6 +39,7 @@ overcloud_roles:
 
   - name: ComputeDeployedServer
     HostnameFormatDefault: 'foo-%stackname%-compute-%index%'
+    disable_upgrade_deployment: True
     disable_constraints: True
     CountDefault: 0
     ServicesDefault: []
@@ -112,6 +113,8 @@ network_environment_args:
   ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
   EC2MetadataIp: "{{ ctl_plane_ip }}"
   DnsServers: "{{ overcloud_dns_servers }}"
+  NeutronPublicInterface: nic2
+  HypervisorNeutronPublicInterface: nic2
 
 undercloud_user: centos
 ssh_user: "{{ undercloud_user }}"
