--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -71,10 +71,13 @@ overcloud_services:
 #      - OS::TripleO::Services::Docker
 
 # Which nodes roles to ssh in and apply deployed-server magic
-#overcloud_deployed_roles: "ControllerDeployedServer ComputeDeployedServer"
-overcloud_deployed_roles: "ControllerDeployedServer"
-controller_hosts: "{{ lookup('env', 'CONTROLLER_HOSTS') }}"
-compute_hosts: "{{ lookup('env', 'COMPUTE_HOSTS')|default('') }}"
+# TODO remaining deployed server roles supported
+# BLOCKSTORAGE_HOSTS, OBJECTSTORAGE_HOSTS, CEPHSTORAGE_HOSTS
+deployed_server_overcloud_roles:
+  - name: ControllerDeployedServer
+    hosts: "{{ lookup('env', 'CONTROLLER_HOSTS') }}"
+  - name: ComputeDeployedServer
+    hosts: "{{ lookup('env', 'COMPUTE_HOSTS')|default('') }}"
 subnodes_ssh_key: "{{ lookup('env', 'SUBNODES_SSH_KEY') }}"
 
 # TODO figure out a networking setup from multinode CI scenarios.
