Sync split-stack-consistent-hostname
https://review.openstack.org/#/c/486720

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -21,6 +21,7 @@ extra_args: >
   {{ extra_args_common }}
   -e {{ working_dir }}/network-environment.yaml
   -e {{ overcloud_templates_path }}/environments/deployed-server-bootstrap-environment-centos.yaml
+  -e {{ overcloud_templates_path }}/environments/split-stack-consistent-hostname-format.yaml
 
 # Composable deployed-server roles to override defaults in
 # tht's deployed-server/deployed-server-roles-data.yaml
