--- a/vars/kubespray-traas.yaml
+++ b/vars/kubespray-traas.yaml
@@ -6,6 +6,8 @@ step_glance_upload: false
 step_register: false
 hypervisor_wait: false
 deployed_server: true
+overcloud_user: centos
+overcloud_key: /home/centos/.ssh/id_rsa
 
 # Drop docker-network.yaml from oooq container_args to not conflict
 container_args: >-
@@ -15,10 +17,15 @@ container_args: >-
 prepare_service_env_args: >-
   -e {{ overcloud_templates_path }}/environments/kubernetes.yaml
 
-deploy_steps_ansible_workflow: true
+# It does not that we want here, yet. Use a custom port mappings template
+# instead!
+#deploy_steps_ansible_workflow: true
+#https://review.openstack.org/#/c/522776
 config_download_args: >-
   -e /usr/share/openstack-tripleo-heat-templates/environments/config-download-environment.yaml
   --config-download
+  --overcloud-ssh-user {{ overcloud_user }}
+  --overcloud-ssh-key {{ overcloud_key }}
 
 node_cound: 1
 flavor_args: ''
