--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -48,6 +48,12 @@ overcloud_roles:
     tags:
       - primary
       - controller
+    networks:
+      - External
+      - InternalApi
+      - Storage
+      - StorageMgmt
+      - Tenant
 
 #  - name: ComputeDeployedServer
 #    HostnameFormatDefault: 'foo-%stackname%-compute-%index%'
@@ -82,12 +88,16 @@ overcloud_services:
 #      - OS::TripleO::Services::ComputeNeutronOvsAgent
 #      - OS::TripleO::Services::Docker
 
+controller_hosts: "{{ lookup('env', 'CONTROLLER_HOSTS') }}"
+first_controller_ip: "{{ controller_hosts.split(' ')[0] }}"
+#compute_hosts: "{{ lookup('env', 'COMPUTE_HOSTS')"
+
 # Which nodes roles to ssh in and apply deployed-server magic
 # TODO remaining deployed server roles supported
 # BLOCKSTORAGE_HOSTS, OBJECTSTORAGE_HOSTS, CEPHSTORAGE_HOSTS
 deployed_server_overcloud_roles:
   - name: ControllerDeployedServer
-    hosts: "{{ lookup('env', 'CONTROLLER_HOSTS') }}"
+    hosts: "{{ controller_hosts }}"
 
 #  - name: ComputeDeployedServer
 #    hosts: "{{ lookup('env', 'COMPUTE_HOSTS')|default('') }}"
@@ -102,15 +112,14 @@ network_isolation: false
 #mtu: 1350
 #mtu_interface:
 #  - eth0
-#undercloud_external_network_cidr: 10.0.0.0/24
 
-# Host cloud private tenant network CIDR, Traas hardcoded
-undercloud_network_cidr: 192.168.0.0/24
-ctl_plane_ip: "{{ hostvars['undercloud'].undercloud_ip }}"
+# a 1st private network created with traas heat templates and used on eth0
+undercloud_network_cidr: "{{ (hostvars['undercloud'].undercloud_ip + '/24')|ipaddr('0') }}"
+# a 2nd private network created with traas heat templates and used on eth1
+undercloud_external_network_cidr: 192.168.253.0/24
 
 # Private VMs' networks for overcloud contol traffic routing,
 # based on the chosen network_isolation
-undercloud_external_network_cidr: "{{ undercloud_network_cidr }}"
 external_network_cidr: "{{ undercloud_external_network_cidr }}"
 
 # Private tenant net defaults and RDO cloud specific DNS servers
@@ -122,16 +131,29 @@ overcloud_dns_servers:
 network_environment_args:
   ExternalNetCidr: "{{ undercloud_external_network_cidr }}"
   ExternalAllocationPools: >
-    [{'start': '{{ undercloud_external_network_cidr|nthhost(4) }}',
+    [{'start': '{{ undercloud_external_network_cidr|nthhost(128) }}',
     'end': '{{ undercloud_external_network_cidr|nthhost(250) }}'}]
   NeutronExternalNetworkBridge: ""
-  ControlPlaneSubnetCidr: "{{ undercloud_network_cidr|ipaddr('prefix') }}"
-  ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
-  EC2MetadataIp: "{{ ctl_plane_ip }}"
+  ControlPlaneSubnetCidr: "24"
+  ControlPlaneDefaultRoute: "{{ first_controller_ip }}"
+  EC2MetadataIp: "{{ first_controller_ip }}"
   DnsServers: "{{ overcloud_dns_servers }}"
   NeutronPublicInterface: eth1
   HypervisorNeutronPublicInterface: eth1
+  DeployedServerPortMap:
+    control_virtual_ip:
+      fixed_ips:
+        - ip_address: "{{ first_controller_ip }}"
+      subnets:
+        - cidr: 24
+    foo-overcloud-controller-0-ctlplane:
+      fixed_ips:
+        - ip_address: "{{ first_controller_ip }}"
+      subnets:
+        - cidr: 24
 
+overcloud_user: centos
+overcloud_key: /home/centos/.ssh/id_rsa
 undercloud_user: centos
 ssh_user: "{{ undercloud_user }}"
 non_root_user: "{{ undercloud_user }}"
