--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -132,6 +132,7 @@ network_environment_args:
     [{'start': '{{ undercloud_external_network_cidr|nthhost(128) }}',
     'end': '{{ undercloud_external_network_cidr|nthhost(250) }}'}]
   NeutronExternalNetworkBridge: ""
+  ControlPlaneIp: "{{ first_controller_ip }}" #or undercloud_ip???
   ControlPlaneSubnetCidr: "24"
   ControlPlaneDefaultRoute: "{{ first_controller_ip }}"
   EC2MetadataIp: "{{ first_controller_ip }}"
