--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -39,7 +39,6 @@ overcloud_roles:
   - name: ControllerDeployedServer
     HostnameFormatDefault: 'foo-%stackname%-controller-%index%'
     disable_constraints: True
-    disable_upgrade_deployment: True
     ServicesDefault: []
     CountDefault: 1
     tags:
@@ -51,6 +50,9 @@ overcloud_roles:
       - Storage
       - StorageMgmt
       - Tenant
+
+# requires https://bugs.launchpad.net/tripleo/+bug/1733837 resolved
+#    disable_upgrade_deployment: True
 
 #  - name: ComputeDeployedServer
 #    HostnameFormatDefault: 'foo-%stackname%-compute-%index%'
