Add HostMap for custom names
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -141,6 +141,8 @@ network_environment_args:
   DnsServers: "{{ overcloud_dns_servers }}"
   NeutronPublicInterface: eth1
   HypervisorNeutronPublicInterface: eth1
+  HostnameMap:
+    overcloud-controller-0: foo-overcloud-controller-0
   DeployedServerPortMap:
     control_virtual_ip:
       fixed_ips:
