--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -43,12 +43,6 @@ overcloud_roles:
     tags:
       - primary
       - controller
-    networks:
-      - External
-      - InternalApi
-      - Storage
-      - StorageMgmt
-      - Tenant
 
 # requires https://bugs.launchpad.net/tripleo/+bug/1733837 resolved
 #    disable_upgrade_deployment: True
@@ -88,7 +82,7 @@ overcloud_services:
 
 controller_hosts: "{{ lookup('env', 'CONTROLLER_HOSTS') }}"
 first_controller_ip: "{{ controller_hosts.split(' ')[0] }}"
-#compute_hosts: "{{ lookup('env', 'COMPUTE_HOSTS')"
+undercloud_ip: "{{ hostvars['undercloud'].undercloud_ip }}"
 
 # Which nodes roles to ssh in and apply deployed-server magic
 # TODO remaining deployed server roles supported
@@ -111,13 +105,13 @@ network_isolation: false
 #mtu_interface:
 #  - eth0
 
-# a 1st private network created with traas heat templates and used on eth0
-undercloud_network_cidr: "{{ (hostvars['undercloud'].undercloud_ip + '/24')|ipaddr('0') }}"
-# a 2nd private network created with traas heat templates and used on eth1
-undercloud_external_network_cidr: 192.168.253.0/24
+# Host cloud private tenant networks CIDR, provisioned with Traas
+undercloud_network_cidr: 192.168.0.0/24
+#undercloud_external_network_cidr: 192.168.253.0/24
 
 # Private VMs' networks for overcloud contol traffic routing,
 # based on the chosen network_isolation
+undercloud_external_network_cidr: "{{ undercloud_network_cidr }}"
 external_network_cidr: "{{ undercloud_external_network_cidr }}"
 
 # Private tenant net defaults and RDO cloud specific DNS servers
@@ -130,13 +124,12 @@ overcloud_dns_servers:
 network_environment_args:
   ExternalNetCidr: "{{ undercloud_external_network_cidr }}"
   ExternalAllocationPools: >
-    [{'start': '{{ undercloud_external_network_cidr|nthhost(128) }}',
+    [{'start': '{{ undercloud_external_network_cidr|nthhost(4) }}',
     'end': '{{ undercloud_external_network_cidr|nthhost(250) }}'}]
   NeutronExternalNetworkBridge: ""
-  ControlPlaneIp: "{{ first_controller_ip }}" #or undercloud_ip???
-  ControlPlaneSubnetCidr: "24"
-  ControlPlaneDefaultRoute: "{{ first_controller_ip }}"
-  EC2MetadataIp: "{{ first_controller_ip }}"
+  ControlPlaneSubnetCidr: "{{ undercloud_network_cidr|ipaddr('prefix') }}"
+  ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
+  EC2MetadataIp: "{{ undercloud_ip }}"
   DnsServers: "{{ overcloud_dns_servers }}"
   NeutronPublicInterface: eth1
   HypervisorNeutronPublicInterface: eth1
