--- a/vars/kubespray-traas.yaml
+++ b/vars/kubespray-traas.yaml
@@ -131,23 +131,15 @@ overcloud_dns_servers:
 
 # FIXME Hack: merge environments/custom.yaml parameter_defaults into a single template
 network_environment_args:
-  ExternalNetCidr: "{{ undercloud_external_network_cidr }}"
-  ExternalAllocationPools: >
-    [{'start': '{{ undercloud_external_network_cidr|nthhost(4) }}',
-    'end': '{{ undercloud_external_network_cidr|nthhost(250) }}'}]
-  NeutronExternalNetworkBridge: ""
   ControlPlaneSubnetCidr: "{{ undercloud_network_cidr|ipaddr('prefix') }}"
   ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
   EC2MetadataIp: "{{ undercloud_ip }}"
   DnsServers: "{{ overcloud_dns_servers }}"
   NeutronPublicInterface: eth1
   HypervisorNeutronPublicInterface: eth1
+  HostnameMap:
+    overcloud-controller-0: foo-overcloud-controller-0
   DeployedServerPortMap:
-    control_virtual_ip:
-      fixed_ips:
-        - ip_address: "{{ first_controller_ip }}"
-      subnets:
-        - cidr: 24
     foo-overcloud-controller-0-ctlplane:
       fixed_ips:
         - ip_address: "{{ first_controller_ip }}"
@@ -158,16 +150,12 @@ network_environment_args:
     nova::compute::libvirt::services::libvirt_virt_type: qemu
     nova::compute::libvirt::libvirt_virt_type: qemu
     nova::compute::libvirt::libvirt_cpu_mode: 'none'
-  ComputeDeployedServerCount: 0
-  ControllerHostnameFormat: '%stackname%-controller-%index%'
   DockerPuppetDebug: true
 
 #  ControllerDeployedServerFlavor: foo
 #  ExtraConfig: {}
 #  ControlVirtualIP: <pre_provisioned_configufed_ip>
 #  RedisVirtualIP: <pre_provisioned_configufed_ip2>
-#  HostnameMap:
-#    overcloud-controller-0: foo-overcloud-controller-0
 
 overcloud_user: centos
 overcloud_key: /home/centos/.ssh/id_rsa
